--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-contact-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://NileshPatel17.github.io/cra-contact-list",
   "dependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
@@ -9,6 +10,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/yup": "^0.26.23",
     "formik": "^1.5.8",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -24,8 +26,10 @@
     "start:twd": "postcss ./src/styles/tailwind.pcss -o ./src/styles/tailwind.css --watch",
     "build:twd": "postcss ./src/styles/tailwind.pcss -o ./src/styles/tailwind.css --env production",
     "test": "react-scripts test",
-    "cy:open":"cypress open",
-    "cy:run":"cypress run",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
