--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "cra-contact-list",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Nilesh Patel"
+  },
   "homepage": "https://NileshPatel17.github.io/cra-contact-list",
   "dependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.4",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/yup": "^0.26.23",
     "formik": "^1.5.8",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
@@ -51,6 +49,11 @@
     "autoprefixer": "^9.6.1",
     "concurrently": "^4.1.2",
     "cypress": "^3.4.1",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^6.1.3",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/yup": "^0.26.23"
   }
 }
